--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.10.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/picker": "^1.6.1",
     "@react-navigation/drawer": "^5.8.1",
     "@react-navigation/native": "^5.5.0",
     "@react-navigation/stack": "^5.4.1",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-datepicker": "^1.7.2",
