--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-document-picker": "^3.4.0",
     "react-native-elements": "^2.0.1",
+    "react-native-elevated-view": "0.0.6",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-picker": "^2.3.1",
     "react-native-reanimated": "^1.9.0",
