--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/plugin-proposal-decorators": "^7.10.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/picker": "^1.6.1",
+    "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/drawer": "^5.8.1",
     "@react-navigation/native": "^5.5.0",
     "@react-navigation/stack": "^5.4.1",
