--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-native-elevated-view": "0.0.6",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-picker": "^2.3.1",
+    "react-native-ionicons": "^4.6.5",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-ratings": "^7.2.0",
     "react-native-reanimated": "^1.9.0",
     "react-native-responsive-fontsize": "^0.4.3",
     "react-native-safe-area-context": "^3.0.2",
@@ -38,6 +40,7 @@
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-simple-toast": "^1.1.2",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-star-rating": "^1.1.0",
     "react-native-step-indicator": "0.0.11",
     "react-native-ui-lib": "^5.9.1",
     "react-native-vector-icons": "^6.6.0"
