--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-image-picker": "^2.3.1",
     "react-native-ionicons": "^4.6.5",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-maps": "0.27.1",
     "react-native-ratings": "^7.2.0",
     "react-native-reanimated": "^1.9.0",
     "react-native-responsive-fontsize": "^0.4.3",
